--- a/Daily challenge/images/index.html
+++ b/Daily challenge/images/index.html
@@ -6,24 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AVENGERS-ANTMAN</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">   
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="container"></div>
     <nav>
         <img src="../images/Avengers.png" alt="avengers logo">
-        <!-- <form action="index.html"> 
-            <select name="avengers" id="avengers">
-            <option value="avengers">ANTMAN</option>
-            <option value="avengers">IRON-MAN</option>
-            <option value="avengers">BLACK-WIDOW</option>
-            <option value="avengers">HULK</option>
-            <option value="avengers">THOR-ODISON</option>
-        </select>
-        </form> -->
         <div class="links"></div>
         <a href="https://www.marvel.com/movies/ant-man-and-the-wasp">CHARACTERS</a>
         <a href="https://www.marvel.com/movies/ant-man-and-the-wasp">MOVIE</a>
@@ -36,15 +25,17 @@
 
         </blockquote>
     </aside>
-    <footer> <img src="../images/antmang.gif" alt="antman flying">
-        
+
+    <footer>
+        <img src="../images/antmang.gif" alt="antman flying">
+
         <ul>
-        <li><a href="#" class="fa fa-facebook"></a></li>  
-        <li><a href="#" class="fa fa-instagram"></a></li>  
-        <li><a href="#" class="fa fa-youtube"></a></li>  
-        <li><a href="#" class="fa fa-google"></a></li> 
+            <li><a href="#" class="fa fa-facebook"></a></li>
+            <li><a href="#" class="fa fa-instagram"></a></li>
+            <li><a href="#" class="fa fa-youtube"></a></li>
+            <li><a href="#" class="fa fa-google"></a></li>
         </ul>
-        
+
     </footer>
 </body>
 
