--- a/Week2/Day3/Exercise XP/index.html
+++ b/Week2/Day3/Exercise XP/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>w2 d3 xp</title>
 </head>
+
 <body>
     <h3>w2 d3 xp
         <br>
         loop and etc
+
+        3 Ex <br>
+        3 js src
     </h3>
 
-    <script src="ExXp.js"></script>
+    <!-- <script src="ExXp.js"></script> -->
+    <!-- <script src="ExXp2.js"></script> -->
+    <!-- <script src="ExXp3.js"></script> -->
+    <!-- <script src="ExXp4.js"></script> -->
+    <!-- <script src="ExXp5.js"></script> -->
+    <!-- <script src="ExXp6.js"></script> -->
+    <script src="ExXp7.js"></script>
 </body>
+
 </html>
