--- a/Week3/Day4/DailyChallenge/index.html
+++ b/Week3/Day4/DailyChallenge/index.html
@@ -5,15 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily mini proj</title>
-    <link rel="stylesheet" href="style.css">
+    <title>daily To Do LIST week 3 day 4</title>
 </head>
 
 <body>
-        <div class="grid"></div>
-        <div class="side"></div>
+    h1
+    <form>
+        <input type="text" id="text" placeholder="Text here">
+        <input type="button" value="ADD" onclick="addTask()">
+    </form>
+    <div class="listTasks"></div>
 
-    <script src="daily.js"></script>
+    <script src="DailyToDo.js"></script>
 </body>
 
 </html>
