--- a/Week3/Day4/ExerciseXP/index.html
+++ b/Week3/Day4/ExerciseXP/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily mini proj</title>
+    <title>XP mini proj</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -13,7 +13,7 @@
         <div class="grid"></div>
         <div class="side"></div>
 
-    <script src="daily.js"></script>
+    <script src="xpColor.js"></script>
 </body>
 
 </html>
