--- a/Week5/Day1/ExerciseXPGold/index.html
+++ b/Week5/Day1/ExerciseXPGold/index.html
@@ -7,7 +7,7 @@
     <title>XPGold</title>
 </head>
 <body>
-    <form action="/another.html" method="get">
+    <form action="/another.html" name="person" method="post">
         <label for="fName">NAME:</label>
         <input type="text" name="fName" placeholder="first name"><br>
         <label for="lName">LAST NAME:</label>
