xp mini proj-AJAX-Http-JSON  w5 d5

--- a/Week5/Day4/DailyChallenge/index.html
+++ b/Week5/Day4/DailyChallenge/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily w5 d4</title>
 </head>
+
 <body>
     <form action="index.html" method="get">
         <input type="text" placeholder="1st city">
-        <input type="text" placeholder="1st city latitude">
-        <input type="text" placeholder="1st city longitude">
+        <input type="text" placeholder="1st city latitude" value="48.864716">
+        <input type="text" placeholder="1st city longitude" value="2.349014">
         <br><br><br>
         <input type="text" placeholder="2nd city">
-        <input type="text" placeholder="2nd city latitude">
-        <input type="text" placeholder="2nd city longitude">
+        <input type="text" placeholder="2nd city latitude" value="40.730610">
+        <input type="text" placeholder="2nd city longitude" value="-73.935242">
+        <button type="submit">Sunrise</button>
     </form>
 
     <script src="dailyw5d4.js"></script>
 </body>
+
 </html>
