--- a/Week6/Day5/DailyChallenge/index.html
+++ b/Week6/Day5/DailyChallenge/index.html
@@ -8,9 +8,9 @@
     <title>TO DO LIST MINI PROJ</title>
 </head>
 
-<body id="one">
+<body>
 <h1>CREATE NEW TASK</h1>
-    <form action="index.html">
+    <form action="second.html">
         <label for="name">name :</label>
         <input type="text" name="name" placeholder="name"> <br><br>
         <label for="name"> Description:</label>
