--- a/Week6/Day5/DailyChallenge/second.html
+++ b/Week6/Day5/DailyChallenge/second.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="miniprojToDo.js"></script>
     <title>seconde page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body id="two">
+<body onload="displayTask()">
     <h1>YOUR TO-DO LIST HERE</h1>
     <div class="wraper">
-        
+        <ul class="list">
+
+        </ul>
     </div>
 
     <P> To Create more tasks click<a href="index.html">HERE</a></P>
