--- a/Week6/Day5/DailyChallenge/second.html
+++ b/Week6/Day5/DailyChallenge/second.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body onload="displayTask()">
-    <h1>YOUR TO-DO LIST HERE</h1>
+    <h1 >YOUR TO-DO LIST HERE</h1>
     <div class="wraper">
-        <ul class="list">
 
-        </ul>
     </div>
+<div class="graph">
 
+</div>
     <P> To Create more tasks click<a href="index.html">HERE</a></P>
     <script src="secondPage.js"></script>
 </body>
